Fixed a bug where the notes would overlap

--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -342,3 +342,7 @@ html {
   grid-area: signin;
   display: none;
 }
+
+.note {
+  grid-area: notes;
+}
